--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 body {
   font-family: 'Droid Serif', serif;
 }
+.main-page-content {
+  letter-spacing: 0.4px;
+  line-height: 1.6em;
+  margin: 70px auto;
+}
+.disp_front .main-page-content {
+  font-size: 16px;
+}
 @media (min-width: 992px) {
   .right-padding {
     padding-right: 25px;
@@ -8,6 +16,13 @@ body {
   .left-padding {
     padding-right: 25px;
   }
+}
+.alert .close {
+  top: 2px;
+}
+.transition-0.1s {
+  -webkit-transition-duration: 0.1s;
+  transition-duration: 0.1s;
 }
 .sitewide_header {
   margin-bottom: 0px !important;
@@ -17,7 +32,9 @@ body {
   margin-bottom: 20px;
 }
 .navbar {
-  min-height: 56px;
+  min-height: 55px;
+  margin-bottom: 0px;
+  border-top: none !important;
 }
 .navbar .navbar-collapse {
   padding: 0;
@@ -26,7 +43,7 @@ body {
   width: 100%;
 }
 .navbar-nav.evo_container__menu li {
-  margin-top: 18px;
+  margin-top: 17px;
   list-style-type: none;
 }
 .navbar-nav.evo_container__menu li a {
@@ -35,7 +52,7 @@ body {
   text-transform: uppercase;
   font-weight: 900;
   letter-spacing: -0.15px;
-  font-size: 15px;
+  font-size: 14px;
 }
 .navbar-nav.evo_container__menu li.active a.selected {
   text-decoration: underline;
@@ -49,7 +66,6 @@ body {
   width: 54px;
   border-radius: 0;
   margin: 0;
-  background-color: transparent;
 }
 .navbar-nav.evo_container__menu .ufld_icon_links a span {
   font-size: 18px;
@@ -61,9 +77,131 @@ body {
   -webkit-transition-timing-function: ease-in-out;
   transition-timing-function: ease-in-out;
 }
-.navbar-nav.evo_container__menu .ufld_icon_links a span:hover {
-  -webkit-transform: rotate(30deg);
-  transform: rotate(30deg);
+.navbar-nav.evo_container__menu .ufld_icon_links a.ufld_twitter:hover {
+  background-color: #00aced !important;
+  color: #fff;
+}
+.navbar-nav.evo_container__menu .ufld_icon_links a.ufld_facebook:hover {
+  background-color: #3b5998 !important;
+  color: #fff;
+}
+.navbar-nav.evo_container__menu .ufld_icon_links a.ufld_googleplus:hover {
+  background-color: #dd4b39 !important;
+  color: #fff;
+}
+.navbar-nav.evo_container__menu .ufld_icon_links a.ufld_linkedin:hover {
+  background-color: #007bb6 !important;
+  color: #fff;
+}
+.navbar-nav.evo_container__menu .ufld_icon_links a.ufld_github:hover {
+  background-color: #333333 !important;
+  color: #fff;
+}
+.navbar-nav.evo_container__menu .header-search-toggle {
+  float: right;
+}
+.navbar-nav.evo_container__menu .header-search-toggle i {
+  padding: 20px;
+  -webkit-transition-duration: 0.1s;
+  transition-duration: 0.1s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;
+}
+.navbar-nav.evo_container__menu .header-search-toggle i:hover {
+  cursor: pointer;
+  -webkit-transform: scale(1.4);
+  transform: scale(1.4);
+}
+.header-main-search-field {
+  display: none;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+  -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
+}
+.header-main-search-field .search_field {
+  height: 100%;
+  font-size: 46px;
+  text-align: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  /* firefox 19+ */
+  /* ie */
+}
+.header-main-search-field .search_field::-webkit-input-placeholder {
+  color: #eee;
+}
+.header-main-search-field .search_field::-moz-placeholder {
+  color: #eee;
+}
+.header-main-search-field .search_field:-ms-input-placeholder {
+  color: #eee;
+}
+.header-main-search-field .search_field input:-moz-placeholder {
+  color: #eee;
+}
+.front-page-extra-section {
+  font-size: 26px;
+  line-height: 1.6em;
+  text-align: center;
+  margin: 25px auto 70px;
+}
+.front-page-extra-section .extra-section-btn-wrapper {
+  margin-top: 50px;
+}
+.front-page-extra-section .extra-section-btn-wrapper a {
+  border-radius: 3px;
+  border-width: 2px;
+  border-style: solid;
+  font-size: 18px;
+  letter-spacing: 1px;
+  padding: 12px 25px;
+  -webkit-transition-duration: 0.1s;
+  transition-duration: 0.1s;
+  -webkit-transition-timing-function: ease-in-out;
+  transition-timing-function: ease-in-out;
+}
+.front-page-extra-section .extra-section-btn-wrapper a:hover {
+  text-decoration: none;
+}
+@media (min-width: 992px) {
+  .navbar-nav.evo_container__menu .ufld_icon_links a {
+    background-color: transparent;
+  }
+}
+@media (max-width: 992px) {
+  .navbar-nav.evo_container__menu .ufld_icon_links {
+    width: 54px;
+  }
+  .navbar-nav.evo_container__menu .ufld_icon_links:before {
+    font-family: FontAwesome;
+    display: inline-block;
+    content: '\f1e0';
+    font-size: 18px;
+    height: 54px;
+    width: 54px !important;
+    line-height: 54px;
+    -webkit-transition-duration: 0.1s;
+    transition-duration: 0.1s;
+    -webkit-transition-timing-function: ease-in-out;
+    transition-timing-function: ease-in-out;
+  }
+  .navbar-nav.evo_container__menu .ufld_icon_links:hover:before {
+    cursor: pointer;
+    color: #fff;
+  }
+  .navbar-nav.evo_container__menu .ufld_icon_links a {
+    display: none;
+    z-index: 1009;
+  }
+  .navbar-nav.evo_container__menu .ufld_icon_links a.drop-down-social {
+    display: block;
+    width: 55px;
+  }
 }
 .widget_core_user_login #login_form .form-group {
   margin: 0;
@@ -163,6 +301,18 @@ form.search .search_options .search_option label {
 div.compact_search_form input.search_field {
   width: 100%;
   margin: 0;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  box-shadow: none;
+  border-radius: 0;
+  padding: 6px 12px 6px 0;
+}
+div.compact_search_form .search_submit {
+  border-radius: 0;
+}
+div.compact_search_form .search_submit:hover {
+  z-index: 0;
 }
 div.extended_search_form {
   text-align: center;
@@ -189,18 +339,28 @@ textarea.message_text {
 .pull-right .evo_comment_type {
   color: #337ab7;
 }
-.evo_post {
+.evo_post,
+.evo_intro_post,
+.evo_featured_post {
   margin-bottom: 8em;
 }
-.evo_post .small.text-muted {
+.evo_post .small.text-muted,
+.evo_intro_post .small.text-muted,
+.evo_featured_post .small.text-muted {
   margin: 4px 0 10px;
   letter-spacing: 1px;
 }
 .evo_post .small.text-muted a,
-.evo_post .small.text-muted a .glyphicon {
+.evo_intro_post .small.text-muted a,
+.evo_featured_post .small.text-muted a,
+.evo_post .small.text-muted a .glyphicon,
+.evo_intro_post .small.text-muted a .glyphicon,
+.evo_featured_post .small.text-muted a .glyphicon {
   color: inherit;
 }
-.evo_post header .evo_post__categories .categories-icon {
+.evo_post header .evo_post__categories .categories-icon,
+.evo_intro_post header .evo_post__categories .categories-icon,
+.evo_featured_post header .evo_post__categories .categories-icon {
   font-size: 24px;
   -moz-osx-font-smoothing: grayscale;
   padding: 12px;
@@ -210,7 +370,9 @@ textarea.message_text {
   float: left;
   margin-right: 10px;
 }
-.evo_post header .evo_post__categories a {
+.evo_post header .evo_post__categories a,
+.evo_intro_post header .evo_post__categories a,
+.evo_featured_post header .evo_post__categories a {
   margin: 7px 10px 0px 0px;
   line-height: 24px;
   padding: 6px 12px;
@@ -226,45 +388,153 @@ textarea.message_text {
   -webkit-transition-duration: 0.1s;
   transition-duration: 0.1s;
 }
-.evo_post header .evo_post__categories a:hover {
+.evo_post header .evo_post__categories a:hover,
+.evo_intro_post header .evo_post__categories a:hover,
+.evo_featured_post header .evo_post__categories a:hover {
   text-decoration: none;
 }
-.evo_post header .evo_post__info {
+.evo_post header .evo_post__info,
+.evo_intro_post header .evo_post__info,
+.evo_featured_post header .evo_post__info {
   font-size: 13px;
-  letter-spacing: 0.6px;
+  letter-spacing: 1px;
   padding-bottom: 25px;
 }
 .evo_post header .evo_post__info div,
-.evo_post header .evo_post__info > span {
+.evo_intro_post header .evo_post__info div,
+.evo_featured_post header .evo_post__info div,
+.evo_post header .evo_post__info > span,
+.evo_intro_post header .evo_post__info > span,
+.evo_featured_post header .evo_post__info > span {
   display: inline-block;
   margin-right: 25px;
 }
-.evo_post header .evo_post__info i {
+.evo_post header .evo_post__info i,
+.evo_intro_post header .evo_post__info i,
+.evo_featured_post header .evo_post__info i {
   font-size: 18px;
   margin-right: 5px;
 }
-.evo_post .evo_post__full {
+.evo_post header .evo_post__info .evo_post__author a,
+.evo_intro_post header .evo_post__info .evo_post__author a,
+.evo_featured_post header .evo_post__info .evo_post__author a {
+  font-weight: 400;
+}
+.evo_post .evo_post__full,
+.evo_intro_post .evo_post__full,
+.evo_featured_post .evo_post__full {
   font-size: 16px;
   letter-spacing: 0.6px;
   line-height: 1.6em;
 }
-.evo_post .evo_post__full .evo_image_block {
+.evo_post .evo_post__full .evo_image_block,
+.evo_intro_post .evo_post__full .evo_image_block,
+.evo_featured_post .evo_post__full .evo_image_block {
   margin: 0 0 60px 0;
 }
-.evo_post .evo_post__full .evo_image_block img {
+.evo_post .evo_post__full .evo_image_block img,
+.evo_intro_post .evo_post__full .evo_image_block img,
+.evo_featured_post .evo_post__full .evo_image_block img {
   border-radius: 0;
 }
-.evo_post .evo_post__full .evo_post_gallery {
+.evo_post .evo_post__full .evo_post_gallery,
+.evo_intro_post .evo_post__full .evo_post_gallery,
+.evo_featured_post .evo_post__full .evo_post_gallery {
   margin-top: -45px;
   margin-bottom: 44px;
 }
-.evo_post .evo_post__full .evo_post_gallery img {
+.evo_post .evo_post__full .evo_post_gallery img,
+.evo_intro_post .evo_post__full .evo_post_gallery img,
+.evo_featured_post .evo_post__full .evo_post_gallery img {
   border-radius: 0;
 }
-.evo_post footer .evo_post__tags {
+.evo_post .evo_post__full .evo_post__full_text .evo_post_more_link,
+.evo_intro_post .evo_post__full .evo_post__full_text .evo_post_more_link,
+.evo_featured_post .evo_post__full .evo_post__full_text .evo_post_more_link {
+  margin: 35px 0;
+}
+.evo_post .evo_post__full .evo_post__full_text .evo_post_more_link a,
+.evo_intro_post .evo_post__full .evo_post__full_text .evo_post_more_link a,
+.evo_featured_post .evo_post__full .evo_post__full_text .evo_post_more_link a {
+  font-size: 15px;
+  padding: 15px 35px;
+  border-radius: 50px;
+  -webkit-transition-duration: 0.1s;
+  transition-duration: 0.1s;
+}
+.evo_post .evo_post__full .evo_post__full_text .evo_post_more_link a:after,
+.evo_intro_post .evo_post__full .evo_post__full_text .evo_post_more_link a:after,
+.evo_featured_post .evo_post__full .evo_post__full_text .evo_post_more_link a:after {
+  font-family: 'FontAwesome';
+  content: '\f101';
+  padding-left: 8px;
+}
+.evo_post .evo_post__full .evo_post__full_text .evo_post_more_link a:hover,
+.evo_intro_post .evo_post__full .evo_post__full_text .evo_post_more_link a:hover,
+.evo_featured_post .evo_post__full .evo_post__full_text .evo_post_more_link a:hover {
+  text-decoration: none;
+}
+.evo_post footer .evo_post__tags,
+.evo_intro_post footer .evo_post__tags,
+.evo_featured_post footer .evo_post__tags {
   font-size: 15px;
   letter-spacing: 0.6px;
   line-height: 1.6em;
+}
+.evo_featured_post {
+  padding-left: 15px;
+}
+.evo_post_title {
+  display: table;
+}
+.evo_post_title h2 {
+  font-weight: 700;
+  display: table-cell;
+  margin: 0;
+  padding: 25px 0;
+  font-size: 46px;
+}
+.evo_post_title .btn-group {
+  display: table-cell;
+  padding: 20px 0 10px 30px;
+  vertical-align: middle;
+}
+.disp_posts .special_posts_simple_layout__title h2,
+.disp_front .special_posts_simple_layout__title h2 {
+  font-size: 24px;
+  padding: 10px 0;
+}
+.disp_posts .evo_post header .special_posts_simple_layout__info,
+.disp_front .evo_post header .special_posts_simple_layout__info {
+  padding-bottom: 10px;
+}
+.evo_cover_image {
+  text-align: center;
+  display: table;
+  vertical-align: middle;
+  width: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 580px;
+}
+.evo_cover_image .evo_content_block {
+  vertical-align: middle;
+  display: table-cell;
+  width: 100%;
+  text-align: center;
+}
+.evo_cover_image .evo_content_block .evo_intro_post {
+  margin-bottom: 0;
+}
+.evo_cover_image .evo_content_block .evo_intro_post .evo_post_title,
+.evo_cover_image .evo_content_block .evo_intro_post .evo_post_title h2,
+.evo_cover_image .evo_content_block .evo_intro_post .evo_post_title .btn-group {
+  display: block;
+}
+.evo_cover_image .evo_content_block .evo_intro_post .btn-group a {
+  float: none;
 }
 div.bSideItem {
   background: #F7F5FA;
@@ -376,26 +646,19 @@ div.bSideItem h4 {
   margin-top: 0;
 }
 .pagination {
-  margin: 0;
+  margin: 0 0 4em 0;
+}
+.pagination li span,
+.pagination li a {
+  border-radius: 4px;
+  font-size: 13px;
+  padding: 10px 16px;
+  margin-right: 5px;
+  margin-bottom: 5px;
 }
 div.action_messages,
 div.log_container {
   margin: 0;
-}
-.evo_post_title {
-  display: table;
-}
-.evo_post_title h2 {
-  font-weight: 700;
-  display: table-cell;
-  margin: 0;
-  padding: 25px 0;
-  font-size: 46px;
-}
-.evo_post_title .btn-group {
-  display: table-cell;
-  padding: 20px 0 10px 30px;
-  vertical-align: middle;
 }
 footer.row {
   margin-top: 20px;
@@ -504,6 +767,18 @@ div.widget_core_coll_avatar img {
   font-size: 12px;
   padding: 8px 0;
 }
+.widget_core_org_members .evo_org_member {
+  margin-top: 15px;
+}
+.widget_core_org_members .evo_org_member h3 {
+  margin: 25px 0 20px;
+}
+.widget_core_org_members .evo_org_member p.user_field {
+  height: auto !important;
+}
+.widget_core_org_members .evo_org_member img.img-responsive {
+  border-radius: 0 !important;
+}
 .evo_container__sidebar,
 .evo_container__sidebar2 {
   padding: 0 20px;
@@ -525,4 +800,30 @@ div.widget_core_coll_avatar img {
 .evo_container__sidebar .widget_plugin_evo_Calr table,
 .evo_container__sidebar2 .widget_plugin_evo_Calr table {
   width: 100%;
+}
+p.tag_cloud a {
+  font-size: 14px !important;
+  margin: 0 1px 6px 0;
+  display: inline-block;
+  line-height: 1;
+  border-radius: 30px;
+  padding: 8px 15px;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  overflow: hidden;
+  -webkit-transition-duration: 0.1s;
+  transition-duration: 0.1s;
+}
+p.tag_cloud a:hover {
+  text-decoration: none;
+}
+@media (max-width: 992px) {
+  .evo_container__sidebar .widget_plugin_evo_Calr table,
+  .evo_container__sidebar2 .widget_plugin_evo_Calr table {
+    width: 320px;
+    margin: 0 auto;
+  }
 }
