new posts layouts

--- a/style.css
+++ b/style.css
@@ -533,8 +533,44 @@ textarea.message_text {
 .evo_cover_image .evo_content_block .evo_intro_post .evo_post_title .btn-group {
   display: block;
 }
+.evo_cover_image .evo_content_block .evo_intro_post .btn-group {
+  padding-left: 0;
+}
 .evo_cover_image .evo_content_block .evo_intro_post .btn-group a {
   float: none;
+}
+.disp_posts .grid-item.two-cols,
+.disp_posts .grid-item.three-cols {
+  float: left;
+  padding: 0 15px;
+}
+.disp_posts .grid-item.two-cols article,
+.disp_posts .grid-item.three-cols article {
+  margin-bottom: 50px;
+}
+.disp_posts .grid-item.two-cols article .evo_post_masonry h2 a,
+.disp_posts .grid-item.three-cols article .evo_post_masonry h2 a {
+  font-size: 20px;
+  font-weight: 700;
+}
+.disp_posts .grid-item.two-cols article .evo_post__info,
+.disp_posts .grid-item.three-cols article .evo_post__info {
+  padding-bottom: 15px;
+}
+.disp_posts .grid-item.two-cols article .evo_image_block,
+.disp_posts .grid-item.three-cols article .evo_image_block {
+  margin-bottom: 15px;
+}
+.disp_posts .grid-item.two-cols article .evo_post__full_text,
+.disp_posts .grid-item.three-cols article .evo_post__full_text {
+  font-size: 15px;
+  letter-spacing: 0.2px;
+}
+.disp_posts .grid-item.two-cols {
+  width: 50%;
+}
+.disp_posts .grid-item.three-cols {
+  width: 33.333%;
 }
 div.bSideItem {
   background: #F7F5FA;
@@ -662,6 +698,28 @@ div.log_container {
 }
 footer.row {
   margin-top: 20px;
+}
+.back-to-top {
+  display: none;
+  height: 40px;
+  width: 40px;
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  z-index: 9998;
+  font-size: 2rem;
+  font-size: 20px;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 2px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+  overflow: hidden;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+.back-to-top.show {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 .evo_widget h3,
 .evo_widget h4.panel-title {
