--- a/style.css
+++ b/style.css
@@ -335,10 +335,6 @@ label.control-label[for=post_title] {
 textarea.message_text {
   width: 95%;
 }
-.evo_comment_title a,
-.pull-right .evo_comment_type {
-  color: #337ab7;
-}
 .evo_post,
 .evo_intro_post,
 .evo_featured_post {
@@ -430,7 +426,7 @@ textarea.message_text {
 .evo_post .evo_post__full .evo_image_block,
 .evo_intro_post .evo_post__full .evo_image_block,
 .evo_featured_post .evo_post__full .evo_image_block {
-  margin: 0 0 60px 0;
+  margin: 0 0 25px 0;
 }
 .evo_post .evo_post__full .evo_image_block img,
 .evo_intro_post .evo_post__full .evo_image_block img,
@@ -440,8 +436,8 @@ textarea.message_text {
 .evo_post .evo_post__full .evo_post_gallery,
 .evo_intro_post .evo_post__full .evo_post_gallery,
 .evo_featured_post .evo_post__full .evo_post_gallery {
-  margin-top: -45px;
-  margin-bottom: 44px;
+  margin-top: -10px;
+  margin-bottom: 10px;
 }
 .evo_post .evo_post__full .evo_post_gallery img,
 .evo_intro_post .evo_post__full .evo_post_gallery img,
@@ -498,6 +494,13 @@ textarea.message_text {
   display: table-cell;
   padding: 20px 0 10px 30px;
   vertical-align: middle;
+}
+.disp_single .evo_post_title h1 {
+  font-weight: 700;
+  display: table-cell;
+  margin: 0;
+  padding: 25px 0;
+  font-size: 46px;
 }
 .disp_posts .special_posts_simple_layout__title h2,
 .disp_front .special_posts_simple_layout__title h2 {
@@ -577,6 +580,50 @@ textarea.message_text {
 @media (min-width: 1200px) {
   .disp_posts .grid-item.three-cols {
     width: 33.333%;
+  }
+}
+.disp_single .spec_cover_image__header {
+  padding: 15% 15px 0;
+  display: table-cell;
+  vertical-align: middle;
+}
+.disp_single .spec_cover_image__header .evo_post_title,
+.disp_single .spec_cover_image__header .evo_post__categories,
+.disp_single .spec_cover_image__header .evo_post__info {
+  display: block;
+  text-align: left;
+  max-width: 700px;
+  margin: 0 auto;
+}
+.comments-wrapper {
+  margin-top: 80px;
+}
+.evo_comment {
+  margin-left: 59px;
+}
+.evo_comment .evo_comment_title {
+  padding: 15px 15px 0px;
+}
+.evo_comment .evo_comment_title a:hover {
+  background-color: transparent;
+}
+.evo_content_block .evo_comment_avatar img {
+  margin: 0;
+}
+.ratings_table {
+  display: block;
+}
+@media (max-width: 414px) {
+  .evo_content_block .evo_comment_avatar {
+    display: block;
+    text-align: center;
+  }
+  .evo_content_block .evo_comment_avatar img {
+    float: none;
+    margin-bottom: -5px;
+  }
+  .evo_comment {
+    margin-left: 0px;
   }
 }
 div.bSideItem {
@@ -851,6 +898,10 @@ div.widget_core_coll_avatar img {
 .evo_container__sidebar,
 .evo_container__sidebar2 {
   padding: 0 20px;
+}
+.evo_container__sidebar .evo_widget:nth-child(1) div > h4,
+.evo_container__sidebar2 .evo_widget:nth-child(1) div > h4 {
+  margin-top: 0 !important;
 }
 .evo_container__sidebar .widget_core_coll_post_list ul li a,
 .evo_container__sidebar2 .widget_core_coll_post_list ul li a,
